Add additional table prototype for json string array

--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -16,3 +16,4 @@ doctrine:
                 dir: '%kernel.project_dir%/src/Entity'
                 prefix: 'App\Entity'
                 alias: App
+        class_metadata_factory_name: App\Infrastructure\Doctrine\ClassMetadataFactory
